# python-package-starter

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini  travis.yml
.github/workflows/: push.yml  test.yml
foo/: foo.py
tests/: test_foo.py
