[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.14"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
tox-pyenv = "^1.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
