[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.3.5"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
tox = "^3.14"
tox-pyenv = "^1.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
