[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
tox = "^3.14"
tox-pyenv = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
